[package]
name = "ccheck"
version = "0.2.3"
edition = "2021"
description = "Fast minecraft scanner"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features=["rt-multi-thread", "rt", "net", "time", "macros"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
clap = { version = "3.2.15", features = ["derive"] }
anyhow = "1.0.58"
craftping = {version = "0.3.0", features = ["async-tokio"]}
regex = "1"
base64 = "0.13.0"
strum = "0.24"
strum_macros = "0.24"
uuid = "*"
kdam = {version = "0.2.2", features = ["gradient"]}
owo-colors = "3"
webhook = "2.0.0"
spinoff = "0.5.3"
time = "0.3.17"

[profile.release]
lto = true
strip = true